--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@mantine/hooks": "^6.0.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.20.0",
-    "lottie-react": "^2.4.0",
     "apexcharts": "^3.41.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
