--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@mantine/hooks": "^6.0.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.20.0",
-    "lottie-react": "^2.4.0",
+    "antd": "^5.6.3",
     "apexcharts": "^3.41.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
   }
